base/smarthome/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/smarthome 
          type: DirectoryOrCreate 
        name: smarthome-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/smarthome/mosquitto 
          type: DirectoryOrCreate 
        name: mosquitto-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/smarthome/frigate 
          type: DirectoryOrCreate 
        name: frigate-home
