base/smarthome/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: smarthome
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`ha.kouse.xyz`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: homeassistant
      namespace: "smarthome"
      port: 8123
  tls:
    certResolver: default
    domains:
      - main: "kouse.xyz"
        sans:
          - "*.kouse.xyz"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-local
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`ha.nuc.lan`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: homeassistant
      namespace: "smarthome"
      port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`frigate.lan`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: home-frigate
      namespace: "smarthome"
      port: http-auth
      scheme: https
      serversTransport: frigate
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`*`) && ClientIP(`10.0.0.0/8`)
    middlewares: []
    priority: 0
    services:
    - name: mosquitto
      namespace: smarthome
      port: mosquitto
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: frigate-rtsp
spec:
  entryPoints:
    - frigatertsp
  routes:
  - match: HostSNI(`*`) && ClientIP(`10.0.0.0/8`)
    middlewares: []
    priority: 0
    services:
    - name: home-frigate
      namespace: smarthome
      port: rtsp
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-go2rtc
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`go2rtc.lan`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: home-frigate
      namespace: "smarthome"
      port: go2rtc-admin
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensprinklercontroller
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`opensprinklercontroller.kouse.xyz`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: opensprinklercontroller
      namespace: "smarthome"
      port: sprinkler-http
  tls:
    certResolver: default
    domains:
      - main: "kouse.xyz"
        sans:
          - "*.kouse.xyz"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zwave-js-ui
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`zwave.kouse.xyz`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: zwave-js-ui
      namespace: "smarthome"
      port: http
  tls:
    certResolver: default
    domains:
      - main: "kouse.xyz"
        sans:
          - "*.kouse.xyz"
---
